feat(agent): wire typed atomic replan runtime (#115)